--- a/src/main/resources/generate.properties
+++ b/src/main/resources/generate.properties
@@ -1,17 +1,17 @@
-#作者名称
+#\u4F5C\u8005\u540D\u79F0
 author=whx
-#基础路径
-basePackage=cn.kys.message
-#是否启用swagger
+#\u57FA\u7840\u8DEF\u5F84
+basePackage=com.meerkat.base
+#\u662F\u5426\u542F\u7528swagger
 enableSwagger=true
 
-#数据源配置
+#\u6570\u636E\u6E90\u914D\u7F6E
 url=jdbc:mysql://10.1.30.253:3306/meerkat_main?nullCatalogMeansCurrent=true
 username=root
 password=menggejk
 driver=com.mysql.cj.jdbc.Driver
 
-#前缀去除
+#\u524D\u7F00\u53BB\u9664
 tableSuffix=tb_
-#生成表配置，all代表生成全部
-tableNames=tb_sms_sign
+#\u751F\u6210\u8868\u914D\u7F6E\uFF0Call\u4EE3\u8868\u751F\u6210\u5168\u90E8
+tableNames=tb_content_article
