--- a/src/main/resources/generate.properties
+++ b/src/main/resources/generate.properties
@@ -1,9 +1,7 @@
 #\u4F5C\u8005\u540D\u79F0
 author=whx
 #\u57FA\u7840\u8DEF\u5F84
-basePackage=com.meerkat.base
-#\u662F\u5426\u542F\u7528swagger
-enableSwagger=true
+basePackage=xxx.xxx.xxx
 
 #\u6570\u636E\u6E90\u914D\u7F6E
 url=jdbc:mysql://10.1.30.253:3306/meerkat_main?nullCatalogMeansCurrent=true
@@ -12,6 +10,8 @@ password=menggejk
 driver=com.mysql.cj.jdbc.Driver
 
 #\u524D\u7F00\u53BB\u9664
-tableSuffix=tb_
+tableSuffix=hc_
+#\u903B\u8F91\u5220\u9664\u5B57\u6BB5\u540D
+deleteName=is_del
 #\u751F\u6210\u8868\u914D\u7F6E\uFF0Call\u4EE3\u8868\u751F\u6210\u5168\u90E8
-tableNames=tb_content_article
+tableNames=hc_customer
